Themes→3dViewport→Active vertex color do nothing #106885

Closed
opened 2023-04-13 06:53:49 +02:00 by Vyacheslav Kobozev · 5 comments

System Information
Operating system: Windows-10-10.0.17763-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.95

Blender Version
Broken: version: 3.5.0, branch: blender-v3.5-release, commit date: 2023-03-29 02:56, hash: 1be25cfff18b

Short description of error
This one influence nothing. Should it be deleted?
98932743.png

2023-04-13_07-48-03.mp4

p.s. Dull colors and other issues about wireframe described here and I am sad, that it looks abandoned and ignored…

**System Information** Operating system: Windows-10-10.0.17763-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.95 **Blender Version** Broken: version: 3.5.0, branch: blender-v3.5-release, commit date: 2023-03-29 02:56, hash: `1be25cfff18b` **Short description of error** This one influence nothing. Should it be deleted? ![98932743.png](/attachments/5dbcd5d8-535d-443c-979e-5804e48c18a1) [2023-04-13_07-48-03.mp4](/attachments/a1348dfc-0ba3-4b9f-b55c-44515d7c18e8) p.s. Dull colors and other issues about wireframe [described here](https://devtalk.blender.org/t/blender-2-8-wireframes-discussion/666/426) and I am sad, that it looks abandoned and ignored…
Vyacheslav Kobozev added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-04-13 06:53:50 +02:00

I can confirm.
The vertex_active seems to be referenced by TH_VERTEX_ACTIVE which apparently has no use in the 3D View.

I can confirm. The `vertex_active` seems to be referenced by `TH_VERTEX_ACTIVE` which apparently has no use in the 3D View.
Germano Cavalcante added
Module
User Interface
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-04-13 21:26:21 +02:00

And just for completeness: The active color can be set using the following theme setting instead.
active.png

And just for completeness: The active color can be set using the following theme setting instead. ![active.png](/attachments/90dc0a1c-7fda-40b6-ad3e-82fcd176e432)
200 KiB

The active color can be set using the following theme setting instead.
Yup, as i show in the video, so deletion is safe

>The active color can be set using the following theme setting instead. Yup, as i show in the video, so deletion is safe
Member
  • vertex_active / TH_VERTEX_ACTIVE is in use for the Graph Editor (FCurve points).
  • editmesh_active / TH_EDITMESH_ACTIVE is in use elsewhere [we might consider changing the name here geometry_point_active? -- since it is also used for curves]

Both of these are included in rna_def_userdef_theme_spaces_vertex [which is used for the Graph Editor, 3D View and Image Editor]

So solution might be to move this out of rna_def_userdef_theme_spaces_vertex and into rna_def_userdef_theme_space_graph (of course, the naming for rna_def_userdef_theme_spaces_vertex is then also a bit "improvable")

- `vertex_active` / `TH_VERTEX_ACTIVE` is in use for the Graph Editor (FCurve points). - `editmesh_active` / `TH_EDITMESH_ACTIVE` is in use elsewhere [we might consider changing the name here `geometry_point_active`? -- since it is also used for curves] Both of these are included in `rna_def_userdef_theme_spaces_vertex` [which is used for the `Graph Editor`, `3D View` and `Image Editor`] So solution might be to move this out of `rna_def_userdef_theme_spaces_vertex` and into `rna_def_userdef_theme_space_graph` (of course, the naming for `rna_def_userdef_theme_spaces_vertex` is then also a bit "improvable")
Member
a656ce5c16259540d1eb4a756085c5d827703800
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2024-04-11 13:22:02 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#106885
No description provided.