UI: remove "vertex_active" theme color from Editors that dont use it

Report was that "Active Vertex" theme color does nothing for the 3D
View.

- `vertex_active` / `TH_VERTEX_ACTIVE` is only in use for the Graph
Editor (FCurve points).
- `editmesh_active` / `TH_EDITMESH_ACTIVE` is in use elsewhere [we might
consider changing the name here `geometry_point_active`? -- since it is
also used for curves]

Both of these are included in `rna_def_userdef_theme_spaces_vertex`
[which is used for the `Graph Editor`, `3D View` and `Image Editor`]

So solution might be to move this out of
`rna_def_userdef_theme_spaces_vertex` and into
`rna_def_userdef_theme_space_graph` (of course, the naming for
`rna_def_userdef_theme_spaces_vertex` is then also a bit "improvable")

Fixes #106885